chore(deps): Upgrade Gradle to 9.6.1